side bar menu alignment issues

--- a/public/after_login/new_ui/css/style.css
+++ b/public/after_login/new_ui/css/style.css
@@ -7532,7 +7532,7 @@ label.question.m-0.py-3.d-block .MathJax {
 .dash-sidebar .submenu-L2 {
     position: fixed;
     top: 0;
-    left: 201px;
+    left: 270px;
     bottom: 0;
     height: 100%;
 
